--- a/index.html
+++ b/index.html
@@ -6,35 +6,37 @@
     <script src="./function.js" charset="utf-8"></script>
     <title>Julian Lackner</title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="c">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
   </head>
   <body>
 
+
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <!-- Title -->
-          <span class="mdl-layout-title">Julian Lackner.eu</span>
-
+          <span class="mdl-layout-title">Julian Lackner</span>
+          <!-- Add spacer, to align navigation to the right -->
           <div class="mdl-layout-spacer"></div>
           <!-- Navigation. We hide it in small screens. -->
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="">Kontakt</a>
-            <a class="mdl-navigation__link" href="">Instagram</a>
-            <a class="mdl-navigation__link" href="">Bildergallerie</a>
+            <a class="mdl-navigation__link" href="">Home</a>
+            <a class="mdl-navigation__link" href="">Questions?</a>
+            <a class="mdl-navigation__link" href="">Social-Media</a>
+            <a class="mdl-navigation__link" href="">Mail</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">Title</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="">Link</a>
-          <a class="mdl-navigation__link" href="">Link</a>
-          <a class="mdl-navigation__link" href="">Link</a>
-          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="H">Home</a>
+          <a class="mdl-navigation__link" href="Q">Questions?</a>
+          <a class="mdl-navigation__link" href="SM">Social-Media</a>
+          <a class="mdl-navigation__link" href="M">Mail</a>
         </nav>
       </div>
       <main class="mdl-layout__content">
@@ -42,12 +44,15 @@
       </main>
     </div>
 
+<h2>Facebook-Julian Lackner</h2>
+<h2>Instagram-julianlackner.eu</h2>
+
+
 <br><br><br><br><br>
 
     <h1 id="ueberschrift" >Julian Lackner</h1>
 
 
-<h1>Hallo</h1>
 
 <br><br><br><br><br>
 
@@ -58,32 +63,28 @@
 <br><br><br><br><br>
 
 
-<center>
+          <center>
 
-    <img src="./Images/pic1.jpg" alt="Bild Julian">
+              <img src="./Images/pic1.jpg" alt="Bild Julian">
 
-        <style media="screen">
+                  <style media="screen">
 
 
-          img{
+                    img{
 
-              margin-left: auto;
-              margin-right: auto;
-              width:50%;
+                        margin-left: auto;
+                        margin-right: auto;
+                        width:50%;
 
-              }
+                        }
 
-        </style>
+                  </style>
 
-  <center>
+            <center>
 
 <hr>
 
-
-
-    <a id="link" href="https://www.instagram.com/julianlackner.eu/"><img src="./Images/Insta-profile.jpg" alt="Insta-code"></a>
-
-
+            <a id="link" href="https://www.instagram.com/julianlackner.eu/"><img src="./Images/Insta-profile.jpg" alt="Insta-code"></a>
 
 
 <center>
@@ -103,7 +104,63 @@
 <br><br><br><br><br>
 <hr>
 
-<h1>he</h1>
+<footer class="mdl-mega-footer">
+  <div class="mdl-mega-footer__middle-section">
+
+    <div class="mdl-mega-footer__drop-down-section">
+      <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+      <h1 class="mdl-mega-footer__heading">Features</h1>
+      <ul class="mdl-mega-footer__link-list">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Partners</a></li>
+        <li><a href="#">Updates</a></li>
+      </ul>
+    </div>
+
+    <div class="mdl-mega-footer__drop-down-section">
+      <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+      <h1 class="mdl-mega-footer__heading">Details</h1>
+      <ul class="mdl-mega-footer__link-list">
+        <li><a href="#">Specs</a></li>
+        <li><a href="#">Tools</a></li>
+        <li><a href="#">Resources</a></li>
+      </ul>
+    </div>
+
+    <div class="mdl-mega-footer__drop-down-section">
+      <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+      <h1 class="mdl-mega-footer__heading">Technology</h1>
+      <ul class="mdl-mega-footer__link-list">
+        <li><a href="#">How it works</a></li>
+        <li><a href="#">Patterns</a></li>
+        <li><a href="#">Usage</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Contracts</a></li>
+      </ul>
+    </div>
+
+    <div class="mdl-mega-footer__drop-down-section">
+      <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+      <h1 class="mdl-mega-footer__heading">FAQ</h1>
+      <ul class="mdl-mega-footer__link-list">
+        <li><a href="#">Questions</a></li>
+        <li><a href="#">Answers</a></li>
+        <li><a href="#">Contact us</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="mdl-mega-footer__bottom-section">
+    <div class="mdl-logo">Title</div>
+    <ul class="mdl-mega-footer__link-list">
+      <li><a href="#">Help</a></li>
+      <li><a href="#">Privacy & Terms</a></li>
+    </ul>
+  </div>
+
+</footer>
 
 
 
