--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
 
     </div>
 
-
+<center>
         <div id="socialmedia" class="tabcontent">
-          <h3 id="sm2">Social-media</h3>
+          <h1 id="sm2">Social-media</h3>
           <p id ="sm3">Find me on Instagram: <b>julianlackner.eu</b> and on Facebook: <b>Julian Lackner</b></p>
+
+
+  <a  href="https://www.instagram.com/julianlackner.eu/"><img id="instagram" src="./Images/Insta-profile.jpg" alt="Insta-code"
+  <a href="https://www.facebook.com/people/Julian-Lackner/100014502969373/"><img id="facebook" src="./Images/facebook.jpg" alt="Facebook-Link"
+<center>
+
 
         </div>
 
@@ -39,10 +45,24 @@
           <p>Mail: ju.lackner@gmx.net</p>
         </div>
 
+
+
+
+
+
+
+
         <div id="aboutme" class="tabcontent">
           <h3>About me</h3>
           <p>Hi I'm Julian and i'm a Pulp-mill operator.</p>
+          <img id="julianbild"src="./Images/pic1.jpg" alt="Bild Julian">
         </div>
+
+
+
+
+
+
 
         <div id="gallery" class="tabcontent">
           <h3>Pictures</h3>
@@ -51,54 +71,6 @@
 
 
 
-<br><br><br><br><br>
-
-
-<center>
-
-
-<br><br><br><br><br>
-
-
-          <center>
-
-              <img src="./Images/pic1.jpg" alt="Bild Julian">
-
-                  <style media="screen">
-
-
-                    img{
-
-                        margin-left: auto;
-                        margin-right: auto;
-                        width:50%;
-
-                        }
-
-                  </style>
-
-            <center>
-
-<hr>
-
-            <a id="link" href="https://www.instagram.com/julianlackner.eu/"><img src="./Images/Insta-profile.jpg" alt="Insta-code"></a>
-
-
-<center>
-
-
-
-
-
-
-<img src="./Images/ILVUM.jpg" alt="LOGO-OBEN">
-
-
-
-<center>
-
-
-<br><br><br><br><br>
 <hr>
 
 
