--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <p id ="sm3">Find me on Instagram: <b>julianlackner.eu</b> and on Facebook: <b>Julian Lackner</b></p>
 
 
-  <a  href="https://www.instagram.com/julianlackner.eu/"><img id="instagram" src="./Images/Insta-profile.jpg" alt="Insta-code"
-  <a href="https://www.facebook.com/people/Julian-Lackner/100014502969373/"><img id="facebook" src="./Images/facebook.jpg" alt="Facebook-Link"
+  <a  href="https://www.instagram.com/julianlackner.eu/"><img id="instagram" src="./Images/Insta-profile.jpg" alt="Insta-code"></a>
+  <a href="https://www.facebook.com/people/Julian-Lackner/100014502969373/"><img id="facebook" src="./Images/facebook.jpg" alt="Facebook-Link"></a>
 <center>
 
 
