--- a/index.html
+++ b/index.html
@@ -25,50 +25,48 @@
       <button class="tablinks" onclick="openCity(event, 'aboutme')">About me</button>
       <button class="tablinks" onclick="openCity(event, 'gallery')">Gallery</button>
 
+
     </div>
 
+        <center>
+              <div id="socialmedia" class="tabcontent">
+              <h1 id="sm2">Social-media</h3>
+              <p id ="sm3">Find me on Instagram: <b>julianlackner.eu</b> and on Facebook: <b>Julian Lackner</b></p>
+              <a  href="https://www.instagram.com/julianlackner.eu/"><img id="instagram" src="./Images/Insta-profile.jpg" alt="Insta-code"></a>
+              <a href="https://www.facebook.com/people/Julian-Lackner/100014502969373/"><img id="facebook" src="./Images/facebook.jpg" alt="Facebook-Link"></a>
+
+      <center>
+
+      </div>
+
+
+      <div id="contact" class="tabcontent">
+
+              <h3>Contact</h3>
+              <p>Mail: ju.lackner@gmx.net</p>
+
+      </div>
+
+
+              <div id="aboutme" class="tabcontent">
+              <h3>About me</h3>
+              <p>Hi I'm Julian and i'm a Pulp-mill operator.</p>
+              <img id="julianbild"src="./Images/pic1.jpg" alt="Bild Julian">
+
+      </div>
+
+
+      <div id="gallery" class="tabcontent">
 <center>
-        <div id="socialmedia" class="tabcontent">
-          <h1 id="sm2">Social-media</h3>
-          <p id ="sm3">Find me on Instagram: <b>julianlackner.eu</b> and on Facebook: <b>Julian Lackner</b></p>
-
-
-  <a  href="https://www.instagram.com/julianlackner.eu/"><img id="instagram" src="./Images/Insta-profile.jpg" alt="Insta-code"></a>
-  <a href="https://www.facebook.com/people/Julian-Lackner/100014502969373/"><img id="facebook" src="./Images/facebook.jpg" alt="Facebook-Link"></a>
+              <h3>Pictures</h3>
+              <p>All pictures are taken with my Iphone 12</p>
+              <img id="pic2" src="./Images/pic2.jpg" alt="2">
+              <img id="pic3" src="./Images/pic3.jpg" alt="3">
+              <img id="pic4" src="./Images/pic4.jpg" alt="4">
+              <img id="pic5" src="./Images/pic5.jpg" alt="5">
+              <img id="pic6" src="./Images/pic6.jpg" alt="6">
 <center>
-
-
-        </div>
-
-        <div id="contact" class="tabcontent">
-          <h3>Contact</h3>
-          <p>Mail: ju.lackner@gmx.net</p>
-        </div>
-
-
-
-
-        <div id="aboutme" class="tabcontent">
-          <h3>About me</h3>
-          <p>Hi I'm Julian and i'm a Pulp-mill operator.</p>
-          <img id="julianbild"src="./Images/pic1.jpg" alt="Bild Julian">
-        </div>
-
-
-
-
-
-
-
-        <div id="gallery" class="tabcontent">
-          <h3>Pictures</h3>
-          <p>All pictures are taken with my Iphone 12</p>
-        </div>
-
-
-
-<hr>
-
+      </div>
 
 </body>
 </html>
