--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
               <div id="socialmedia" class="tabcontent">
               <h1 id="sm2">Social-media-Links</h3>
 
-              <a  href="https://www.instagram.com/julianlackner.eu/"><img id="instagram" src="./Images/Insta-profile.jpg" alt="Insta-code"></a>
-              <a href="https://www.facebook.com/people/Julian-Lackner/100014502969373/"><img id="facebook" src="./Images/facebook.jpg" alt="Facebook-Link"></a>
+              <a  href="https://www.instagram.com/julianlackner.eu/"><img id="instagram" src="./images/Insta-profile.jpg" alt="Insta-code"></a>
+              <a href="https://www.facebook.com/people/Julian-Lackner/100014502969373/"><img id="facebook" src="./images/facebook.jpg" alt="Facebook-Link"></a>
 
       <center>
 
@@ -52,7 +52,7 @@
               <div id="aboutme" class="tabcontent">
               <h3>About me</h3>
               <p>Hi I'm Julian and i'm a Pulp-mill operator.</p>
-              <img id="julianbild"src="./Images/pic1.jpg" alt="Bild Julian">
+              <img id="julianbild"src="./images/pic1.jpg" alt="Bild Julian">
 
       </div>
 
