--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
               <form>
                   <label for="pswd">gib dein Passwort ein: </label>
                   <input type="password" id="pswd">
-                  <input type="button" value="Submit" onclick="checkPswd();" />
+                  <input type="button" value="Submit" onclick="checkPswd('pswd','pg.html');" />
               </form>
 
               <h3>öffentliche-Gallerie:</h3>
 
-                        <div class="container">
-                        <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-                        <img id="expandedImg" style="width:60%">
-                        <div id="imgtext"></div>
+                  <div class="container">
+                  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+                  <img id="expandedImg" style="width:60%">
+                  <div id="imgtext"></div>
 
           </div>
 
