--- a/pg.html
+++ b/pg.html
@@ -13,24 +13,31 @@
   <h1 id = "gallerieueberschrift" >Hier nun die etwas persönlicheren Fotos</h1>
 
 
-  <form>
-      <label for="pswd2">Bilder vom Ausflug zum Hochleckenhaus: </label>
-      <input type="password" id="pswd2">
-      <input type="button" value="Submit" onclick="checkPswd();" />
-  </form>
   <br>
   <hr>
   <br>
-  <form>
-      <label for="pswd2">Bilder vom Ausflug nach Wien: </label>
-      <input type="password" id="pswd3">
-      <input type="button" value="Submit" onclick="checkPswd();" />
-  </form>
-  <br>
-  <hr>
-  <br>
-</div>
 
-  </div>
+  <form>
+      <label for="pswdz">Bilder Ausflug Wien: </label>
+      <input type="password" id="pswdz">
+      <input type="button" value="Submit" onclick="checkPswd('pswdz','pg1.html');" />
+  </form>
+
+  <br>
+  <hr>
+  <br>
+
+<form>
+    <label for="pswdd">Bilder Ausflug Berlin: </label>
+    <input type="password" id="pswdd">
+    <input type="button" value="Submit" onclick="checkPswd('pswdd','pg2.html');" />
+
+  </form>
+
+    <br>
+    <hr>
+    <br>
+
+
 </body>
 </html>
