--- a/pg2.html
+++ b/pg2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./stylesite.css">
     <script src="./function.js" charset="utf-8"></script>
-    <title>Ausflug Linz-Wien</title>
+    <title>Ausflug Wien</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
