--- a/index.html
+++ b/index.html
@@ -169,7 +169,18 @@
 
       <h1>Hier findest du selbst erstellte 3D-Objekte welche ich dir zum Download freistelle:</h1>
 
+
     <center>
+
+      <link rel="stylesheet" href="">
+
+      <!-- Auto width -->
+      <button class="btn"><i class="fa fa-download"></i> Download</button>
+
+      <!-- Full width -->
+      <button class="btn" style="width:100%"><i class="fa fa-download"></i> Download</button>
+
+
 
     </div>
 
