--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <br><br><br><br><br>
 
-      <h1 id="ueberschrift" >Julian Lackner</h1>
+      <h1 id="ueberschrift" >Juulian Lackner</h1>
 
 
       <div class="tab">
@@ -172,7 +172,7 @@
 
     <center>
 
-    
+
 
     </div>
 
