--- a/index.html
+++ b/index.html
@@ -1,83 +1,70 @@
 <!DOCTYPE html>
-<html lang="de" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css" media="only  screen and (min-aspect-ratio: 1/1)">
-  <link rel="stylesheet" href="mobile.css" media="only  screen and (max-aspect-ratio: 1/1)">
-    <script src="./function.js" charset="utf-8"></script>
-    <title>Julian Lackner</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
+<body id="start">
+    <div id="fächerFlex">
 
-    <body>
+        <p>
+            <div class="fächerFlex2">
+                <div class="fächerListe" id="Gastein">
+                    <br><a  href="Unterseiten/Gastein.html">Gastein</a><br>
+                </div>
+            </div>
+            <div class="fächerFlex2">
+                <div class="fächerListe" id="Prag">
+                    <br><a href="Unterseiten/Prag.html">Prag</a><br>
+                </div>
+                <div class="fächerListe" id="Wachau">
+                    <br><a href="Unterseiten/Wachau.html">Wachau</a><br>
+                </div>
+                <div class="fächerListe" id="Lyon">
+                    <br><a href="Unterseiten/Lyon.html">Lyon</a><br>
+                </div>
+            </div>
+            <div class="fächerFlex2">
+                <div class="fächerListe" id="Madrid">
+                    <br><a href="Unterseiten/Madrid.html">Madrid</a><br>
+                </div>
+                <div class="fächerListe" id="LosAngeles">
+                    <br><a href="Unterseiten/Los Angeles.html">Los Angeles</a><br>
+                </div>
+                <div class="fächerListe" id="Barcelona">
+                    <br><a href="Unterseiten/Barcelona.html">Barcelona</a><br>
+                </div>
+            </div>
 
-
-<!--index Ueberschrift START*/-->
-
-          <h1 id="ueberschrift" >Julian Lackner</h1>
-          <br><br><br><br><br>
-<!--index Ueberschrift ENDE*/-->
-<!--index Start der Tabs*/-->
-<!-- Tab links -->
-<div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'reiseberichte')">Reiseberichte</button>
-  <button class="tablinks" onclick="openCity(event, '3ddruck')">3D-Druck</button>
-  <button class="tablinks" onclick="openCity(event, 'socialmedia')">Socialmedia</button>
-</div>
-
-<!-- Tab content 1 Start -->
-<div id="reiseberichte" class="tabcontent">
-  <h3>Reiseberichte</h3>
-  <p>Verschiedene Länder und Städte in denen ich war:.</p>
-</div>
-
-
-
-
-
-
-
-
-<!-- Tab content 1 Ende -->
-
-
-
-
-
-<!-- Tab content 2 Start -->
-<div id="3ddruck" class="tabcontent">
-  <h3>3D-Druck</h3>
-  <p>Paris is the capital of France.</p>
-</div>
-<!-- Tab content 2 Ende -->
-
-
-
-
-
-<!-- Tab content 3 Start -->
-<div id="socialmedia" class="tabcontent">
-  <h3>Socialmedia</h3>
-  <p>INFORMATION.</p>
-</div>
-<!-- Tab content 3 Ende -->
-
-
-
+            <div class="fächerFlex2">
+                <div class="fächerListe" id="London">
+                    <br><a href="Unterseiten/London.html">London</a><br>
+                </div>
+                <div class="fächerListe" id="Germany">
+                    <br><a href="Unterseiten/German.html">Germany</a><br>
+                </div>
+                <div class="fächerListe" id="Pacific-coast">
+                    <br><a href="Unterseiten/Pacific-coast.html">Pacific-cost</a><br>
+                </div>
+            </div>
+            <div class="fächerFlex2">
+                <div class="fächerListe" id="USA">
+                    <br><a href="Unterseiten/USA.html">USA</a><br>
+                </div>
+                <div class="fächerListe" id="SanFrancisco">
+                    <br><a href="Unterseiten/San Francisco.html">San Francisco</a><br>
+                </div>
+                <div class="fächerListe" id="NewYork">
+                    <br><a href="Unterseiten/New York City.html">New York City</a><br>
+                </div>
+            </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
+        </p>
+    </div>
 
 
 </body>
