--- a/Unterseiten/San Francisco.html
+++ b/Unterseiten/San Francisco.html
@@ -10,9 +10,9 @@
 
 
   <img class="Fotos" src="../image/sanfrancisco1.jpeg">
-
-
-
+  <img class="Fotos" src="../image/sanfrancisco2.jpg">
+<img class="Fotos" src="../image/sanfrancisco3.jpg">
+<img class="Fotos" src="../image/sanfrancisco4.jpg">
 
 
     <a href="../index.html">Zurück</a>
