--- a/Unterseiten/Gastein.html
+++ b/Unterseiten/Gastein.html
@@ -8,13 +8,13 @@
 </head>
 <body class="Unterseiten">
     <div id="eine">
-      <img class="Fotos" src="../image/Selbstprobe_von_dem_Camera_Filter.jpg">
-      <img class="Fotos" src="../image/Selbstprobe_von_dem_Camera_Filter.jpg">
-      <img class="Fotos" src="../image/Selbstprobe_von_dem_Camera_Filter.jpg" >
+      <img class="Fotos" src="../image/sanfrancisco1.jpeg">
+      <img class="Fotos" src="../image/sanfrancisco2.jpg">
+      <img class="Fotos" src="../image/sanfrancisco3.jpg" >
     </div>
 
         <a href="../index.html">Zurück</a>
 
-    
+
 </body>
 </html>
