--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
                 <div class="fächerListe" id="London">
                     <br><a href="Unterseiten/London.html">London</a><br>
                 </div>
-                <div class="fächerListe" id="Germany">
-                    <br><a href="Unterseiten/German.html">Germany</a><br>
+                <div class="fächerListe" id="Berlin">
+                    <br><a href="Unterseiten/Berlin.html">Berlin</a><br>
                 </div>
                 <div class="fächerListe" id="Pacific-coast">
                     <br><a href="Unterseiten/Pacific-coast.html">Pacific-cost</a><br>
                 </div>
             </div>
             <div class="fächerFlex2">
-                <div class="fächerListe" id="USA">
-                    <br><a href="Unterseiten/USA.html">USA</a><br>
+                <div class="fächerListe" id="Warnemuende">
+                    <br><a href="Unterseiten/USA.html">Warnemünde</a><br>
                 </div>
                 <div class="fächerListe" id="SanFrancisco">
                     <br><a href="Unterseiten/San Francisco.html">San Francisco</a><br>
@@ -60,6 +60,9 @@
                 <div class="fächerListe" id="NewYork">
                     <br><a href="Unterseiten/New York City.html">New York City</a><br>
                 </div>
+                <div class="fächerListe" id="Schwerin">
+                    <br><a href="Unterseiten/New York City.html">Schwerin</a><br>
+              
             </div>
 
 
