--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <br><a href="Unterseiten/Berlin.html">Berlin</a><br>
                 </div>
                 <div class="fächerListe" id="Pacific-coast">
-                    <br><a href="Unterseiten/Pacific-coast.html">Pacific-cost</a><br>
+                    <br><a href="Unterseiten/Pacific-coast.html">Pacific-coast</a><br>
                 </div>
             </div>
             <div class="fächerFlex2">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="fächerListe" id="Schwerin">
                     <br><a href="Unterseiten/New York City.html">Schwerin</a><br>
-              
+
             </div>
 
 
