--- a/Unterseiten/Gastein.html
+++ b/Unterseiten/Gastein.html
@@ -9,8 +9,8 @@
 <body class="Unterseiten">
     <div id="eine">
       <img class="Fotos" src="../image/sanfrancisco1.jpeg">
-      <img class="Fotos" src="../image/sanfrancisco2.jpg">
-      <img class="Fotos" src="../image/sanfrancisco3.jpg" >
+      <img class="Fotos" src="../image/sanfrancisco1.jpeg">
+      <img class="Fotos" src="../image/sanfrancisco1.jpeg" >
     </div>
 
         <a href="../index.html">Zurück</a>
