--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,13 +60,12 @@
                 <div class="fächerListe" id="NewYork">
                     <br><a href="Unterseiten/New York City.html">New York City</a><br>
                 </div>
+            </div>
+            <div class="fächerFlex2">
                 <div class="fächerListe" id="Schwerin">
                     <br><a href="Unterseiten/New York City.html">Schwerin</a><br>
-
+                </div>
             </div>
-
-
-        </p>
     </div>
 
 
