--- a/index.html
+++ b/index.html
@@ -60,11 +60,21 @@
                 <div class="fächerListe" id="NewYork">
                     <br><a href="Unterseiten/New York City.html">New York City</a><br>
                 </div>
-                <div class="fächerListe" id="Schwerin">
-                    <br><a href="Unterseiten/New York City.html">Schwerin</a><br>
 
-            </div>
 
+
+                <div class="fächerFlex2">
+                <div class="fächerListe" id="Chiemsee">
+                    <br><a href="Unterseiten/Chiemsee.html">Chiemsee</a><br>
+                  </div>
+
+                  <div class="fächerListe" id="Lissabon">
+                      <br><a href="Unterseiten/Lissabon.html">Lissabon</a><br>
+                    </div>
+
+                    <div class="fächerListe" id="Athen">
+                        <br><a href="Unterseiten/Athen.html">Athen</a><br>
+                      </div>
 
         </p>
     </div>
