--- a/Unterseiten/San Francisco.html
+++ b/Unterseiten/San Francisco.html
@@ -8,14 +8,48 @@
 </head>
 <body class="Unterseiten">
 
-
-  <img class="Fotos" src="../image/sanfrancisco1.jpeg">
-  <img class="Fotos" src="../image/sanfrancisco2.jpg">
-<img class="Fotos" src="../image/sanfrancisco3.jpg">
-<img class="Fotos" src="../image/sanfrancisco4.jpg">
+  <!--Zurückfunktion-->
+      <a href="../index.html">Zurück</a>
 
 
-    <a href="../index.html">Zurück</a>
+<!--Überschrift des spezifischen Orts-->
+  <h1 id="Ueberschriftunterseite">San Francisco</h1>
+
+<!--Absätze-->
+              <br><br><br>
+<!--Linie-->
+              <hr>
+<!--Aufzählung-->
+                <ul >
+            		<li id="Aufzaehlung">Land: Vereinigte Staaten von Amerika</li>
+            		<li id="Aufzaehlung">Wann: Mai 2022</li>
+          	   </ul>
+               <p id="Unterueberschrift"> Sehenswürdigkeiten in San Francisco:</p>
+               <br><br>
+                <ul >
+                <li id="Aufzaehlung">Fisherman's Wharf</li>
+                <li id="Aufzaehlung">Cablecar turnable Powell/Market (Umkehrplatz der Cablecars)</li>
+                <li id="Aufzaehlung">Golden Gate Park</li>
+                <li id="Aufzaehlung">Busfahrt über die Golden Gate Bridge</li>
+                <li id="Aufzaehlung">Schifffahrt in der San Francisco Bay</li>
+                <li id="Aufzaehlung">Ausflug zur Insel Alcatraz</li>
+                <li id="Aufzaehlung">Golden Gate Park</li>
+                <li id="Aufzaehlung">Lombard Street</li>
+                </ul>
+
+<!--Linie-->
+                <hr>
+
+<!--9 Fotos vom Unterordner der spez. Stadt-->
+                <img class="Fotos" src="../image/sanfrancisco/sanfrancisco1.jpeg">
+                <img class="Fotos" src="../image/sanfrancisco/sanfrancisco2.jpeg">
+                <img class="Fotos" src="../image/sanfrancisco/sanfrancisco3.jpeg">
+                <img class="Fotos" src="../image/sanfrancisco/sanfrancisco4.jpeg">
+                <img class="Fotos" src="../image/sanfrancisco/sanfrancisco5.jpeg">
+                <img class="Fotos" src="../image/sanfrancisco/sanfrancisco6.jpg">
+                <img class="Fotos" src="../image/sanfrancisco/sanfrancisco7.jpg">
+                <img class="Fotos" src="../image/sanfrancisco/sanfrancisco8.jpg">
+                <img class="Fotos" src="../image/sanfrancisco/sanfrancisco9.jpg">
 
 </body>
 </html>
