--- a/Unterseiten/Prag.html
+++ b/Unterseiten/Prag.html
@@ -41,17 +41,17 @@
                       <!--Linie-->
                       <hr>
                       <!--9 Fotos vom Unterordner der spez. Stadt-->
-                      <img class="Fotos" src="../image/prag/prag1.jpeg">
-                      <img class="Fotos" src="../image/prag/prag2.jpeg">
-                      <img class="Fotos" src="../image/prag/prag3.jpeg">
+                      <img class="Fotos" src="../image/prag/prag1.jpg">
+                      <img class="Fotos" src="../image/prag/prag2.jpg">
+                      <img class="Fotos" src="../image/prag/prag3.jpg">
 
-                      <img class="Fotos" src="../image/prag/prag4.jpeg">
-                      <img class="Fotos" src="../image/prag/prag5.jpeg">
-                      <img class="Fotos" src="../image/prag/prag6.jpeg">
+                      <img class="Fotos" src="../image/prag/prag4.jpg">
+                      <img class="Fotos" src="../image/prag/prag5.jpg">
+                      <img class="Fotos" src="../image/prag/prag6.jpg">
 
-                      <img class="Fotos" src="../image/prag/prag7.jpeg">
-                      <img class="Fotos" src="../image/prag/prag8.jpeg">
-                      <img class="Fotos" src="../image/prag/prag9.jpeg">
+                      <img class="Fotos" src="../image/prag/prag7.jpg">
+                      <img class="Fotos" src="../image/prag/prag8.jpg">
+                      <img class="Fotos" src="../image/prag/prag9.jpg">
 
                     </body>
                     </html>
