--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body id="start">
     <div id="fächerFlex">
 
-<h1 id="UeberschriftStartseite">julianlackner.at_77777777777</h1>
+<h1 id="UeberschriftStartseite">julianlackner.at</h1>
 
     <br><br><br><br><br>
 
